syntax = "proto3";

option go_package = "github.com/streamnative/oxia/coordination";

package coordination;

//controller -> node
service OxiaControl {
  rpc Fence(FenceRequest) returns (FenceResponse) {}
  rpc BecomeLeader(BecomeLeaderRequest) returns (BecomeLeaderResponse) {}
  rpc AddFollower(AddFollowerRequest) returns (CoordinationEmpty) {}

  rpc PrepareReconfig(PrepareReconfigRequest) returns (PrepareReconfigResponse) {}
  rpc Snapshot(SnapshotRequest) returns (SnapshotResponse) {}
  rpc CommitReconfig(CommitReconfigRequest) returns (CommitReconfigResponse) {}
}

//node (leader) -> node (follower)
service OxiaLogReplication {
  rpc Truncate(TruncateRequest) returns (TruncateResponse) {}
  rpc AddEntries(stream AddEntryRequest) returns (stream AddEntryResponse) {}
}

message ServerAddress {
  string internal_url = 1;
  string public_url = 2;
}

message EntryId {
  uint64 epoch = 1;
  uint64 offset = 2;
}

message LogEntry {
  EntryId entry_id = 1;
  bytes value = 2;
  uint64 timestamp = 3;
}

message CoordinationEmpty {}

message FenceRequest {
  uint64 epoch = 1;
}
message FenceResponse {
  uint64 epoch = 1;
  EntryId head_index = 2;
}

message BecomeLeaderRequest {
  message FollowerEntry {
    ServerAddress key = 1;
    EntryId value = 2;
  }
  uint64 epoch = 1;
  uint32 replication_factor = 2;
  repeated FollowerEntry follower_map = 3;
}
message BecomeLeaderResponse {
  uint64 epoch = 1;
}

message AddFollowerRequest {
  uint64 epoch = 1;
  ServerAddress follower = 2;
  EntryId head_index = 3;
}

message TruncateRequest {
  uint64 epoch = 1;
  EntryId head_index = 2;
}
message TruncateResponse {
  uint64 epoch = 1;
  EntryId head_index = 2;
}

message AddEntryRequest {
  uint64 epoch = 1;
  LogEntry entry = 2;
  EntryId commit_index = 3;
}
message AddEntryResponse {
  uint64 epoch = 1;
  EntryId entry_id = 2;
  bool invalid_epoch = 3;

}

enum ReconfigOp {
  contract = 0;
  expand = 1;
  nodeSwap = 2;
}

message PrepareReconfigRequest {
  uint64 epoch = 1;
  ReconfigOp op = 2;
  optional ServerAddress old_node = 3;
  optional ServerAddress new_node = 4;

}

message PrepareReconfigResponse {
  uint64 epoch = 1;
  optional EntryId head_index = 2;
  optional EntryId commit_index = 3;
  repeated LogEntry snapshot = 4;

}

message SnapshotRequest {
  uint64 epoch = 1;
  EntryId head_index = 2;
  EntryId commit_index = 3;
  LogEntry snapshot = 4;
}
message SnapshotResponse {
  uint64 epoch = 1;
  EntryId head_index = 2;
}

message CommitReconfigRequest {
  uint64 epoch = 1;
  uint32 replication_factor = 2;
  ReconfigOp op = 3;
  optional ServerAddress old_node = 4;
  optional ServerAddress new_node = 5;
  optional EntryId head_index = 6;
}
message CommitReconfigResponse {
  uint64 epoch = 1;
  ReconfigOp op = 2;
  optional ServerAddress old_node = 3;
  optional ServerAddress new_node = 4;
}
